--- a/Catchit_v04/Catchit_v04.vcxproj.filters
+++ b/Catchit_v04/Catchit_v04.vcxproj.filters
@@ -18,6 +18,9 @@
     <Filter Include="src">
       <UniqueIdentifier>{d8376475-7454-4a24-b08a-aac121d3ad6f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="addon">
+      <UniqueIdentifier>{d10660f7-5e0c-4b8e-92e2-a0ca027f303a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\ofApp.h">
